# ODE-integrators-for-Lagrangian-particles

./: .gitignore  CMakeLists.txt  README.md
data/: Arctic-20km.nc  README.md  arctic20.nc  initial_positions_arctic.txt  initial_positions_arctic20.txt  initial_positions_latlon.txt  initial_positions_nordic.txt  initial_positions_nordic4.txt  initial_positions_norkyst.txt  initial_positions_norkyst800.txt  plot_outlines.py
notebooks/: ErrorAnalysis.ipynb
scripts/: run_all.sh
src/: currentdata.f90  experiment.f90  input.f90  integrator.f90  integrators.f90  interpolator.f90  output.f90  parameters.f90  pointertest2.f90  run.f90  run_arctic.f90  run_arctic_ref.f90  run_nordic.f90  run_nordic_ref.f90  run_norkyst.f90  run_norkyst_ref.f90  test.f90
